Exercicios/Aula_5/calc.output
Terminals unused in grammar

    THEN
    QUIT


Grammar

    0 $accept: program $end

    1 program: lines

    2 lines: line
    3      | lines line

    4 line: declarations NEWLINE
    5     | commands NEWLINE

    6 declarations: declaration
    7             | declarations declaration

    8 declaration: INT ID END
    9            | FLOAT ID END
   10            | BOOL ID END

   11 commands: command
   12         | commands command

   13 command: if_command
   14        | assignments
   15        | read_command END
   16        | write_command END

   17 read_command: READ OPEN_PARENTHESIS ID CLOSE_PARENTHESIS

   18 write_command: WRITE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS

   19 assignments: assignment

   20 assignment: ID ASSIGN expression END

   21 expression: term
   22           | expression PLUS term
   23           | expression MINUS term

   24 term: factor
   25     | term MULTIPLY factor
   26     | term DIVIDE factor

   27 factor: NUM
   28       | ID
   29       | OPEN_PARENTHESIS expression CLOSE_PARENTHESIS

   30 boolean_expression: TRUEbool
   31                   | FALSEbool
   32                   | NOT boolean_expression
   33                   | expression EQUAL expression
   34                   | expression LESS_EQUAL expression
   35                   | expression GREATER_EQUAL expression
   36                   | expression NOT_EQUAL expression
   37                   | expression LESS expression
   38                   | expression GREATER expression
   39                   | expression OR expression
   40                   | expression AND expression
   41                   | expression

   42 if_command: IF OPEN_PARENTHESIS boolean_expression CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS ELSE OPEN_BRACKETS expression CLOSE_BRACKETS
   43           | IF OPEN_PARENTHESIS boolean_expression CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <float> (258) 27
    PLUS (259) 22
    MINUS (260) 23
    MULTIPLY (261) 25
    DIVIDE (262) 26
    ASSIGN (263) 20
    IF (264) 42 43
    THEN (265)
    ELSE (266) 42
    EQUAL (267) 33
    LESS (268) 37
    GREATER (269) 38
    LESS_EQUAL (270) 34
    NOT_EQUAL (271) 36
    GREATER_EQUAL (272) 35
    AND (273) 40
    OR (274) 39
    NOT (275) 32
    OPEN_BRACKETS (276) 42 43
    CLOSE_BRACKETS (277) 42 43
    OPEN_PARENTHESIS (278) 17 18 29 42 43
    CLOSE_PARENTHESIS (279) 17 18 29 42 43
    TRUEbool <int> (280) 30
    FALSEbool <int> (281) 31
    NEWLINE (282) 4 5
    QUIT (283)
    INT (284) 8
    FLOAT (285) 9
    BOOL (286) 10
    READ (287) 17
    WRITE (288) 18
    END (289) 8 9 10 15 16 20
    ID <char*> (290) 8 9 10 17 20 28


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program (37)
        on left: 1
        on right: 0
    lines (38)
        on left: 2 3
        on right: 1 3
    line (39)
        on left: 4 5
        on right: 2 3
    declarations (40)
        on left: 6 7
        on right: 4 7
    declaration (41)
        on left: 8 9 10
        on right: 6 7
    commands (42)
        on left: 11 12
        on right: 5 12
    command (43)
        on left: 13 14 15 16
        on right: 11 12
    read_command <float> (44)
        on left: 17
        on right: 15
    write_command (45)
        on left: 18
        on right: 16
    assignments <float> (46)
        on left: 19
        on right: 14 42 43
    assignment <float> (47)
        on left: 20
        on right: 19
    expression <float> (48)
        on left: 21 22 23
        on right: 18 20 22 23 29 33 34 35 36 37 38 39 40 41 42
    term <float> (49)
        on left: 24 25 26
        on right: 21 22 23 25 26
    factor <float> (50)
        on left: 27 28 29
        on right: 24 25 26
    boolean_expression <int> (51)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 32 42 43
    if_command <float> (52)
        on left: 42 43
        on right: 13


State 0

    0 $accept: • program $end

    IF     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    BOOL   shift, and go to state 4
    READ   shift, and go to state 5
    WRITE  shift, and go to state 6
    ID     shift, and go to state 7

    program        go to state 8
    lines          go to state 9
    line           go to state 10
    declarations   go to state 11
    declaration    go to state 12
    commands       go to state 13
    command        go to state 14
    read_command   go to state 15
    write_command  go to state 16
    assignments    go to state 17
    assignment     go to state 18
    if_command     go to state 19


State 1

   42 if_command: IF • OPEN_PARENTHESIS boolean_expression CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS ELSE OPEN_BRACKETS expression CLOSE_BRACKETS
   43           | IF • OPEN_PARENTHESIS boolean_expression CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS

    OPEN_PARENTHESIS  shift, and go to state 20


State 2

    8 declaration: INT • ID END

    ID  shift, and go to state 21


State 3

    9 declaration: FLOAT • ID END

    ID  shift, and go to state 22


State 4

   10 declaration: BOOL • ID END

    ID  shift, and go to state 23


State 5

   17 read_command: READ • OPEN_PARENTHESIS ID CLOSE_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 24


State 6

   18 write_command: WRITE • OPEN_PARENTHESIS expression CLOSE_PARENTHESIS

    OPEN_PARENTHESIS  shift, and go to state 25


State 7

   20 assignment: ID • ASSIGN expression END

    ASSIGN  shift, and go to state 26


State 8

    0 $accept: program • $end

    $end  shift, and go to state 27


State 9

    1 program: lines •
    3 lines: lines • line

    IF     shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    BOOL   shift, and go to state 4
    READ   shift, and go to state 5
    WRITE  shift, and go to state 6
    ID     shift, and go to state 7

    $default  reduce using rule 1 (program)

    line           go to state 28
    declarations   go to state 11
    declaration    go to state 12
    commands       go to state 13
    command        go to state 14
    read_command   go to state 15
    write_command  go to state 16
    assignments    go to state 17
    assignment     go to state 18
    if_command     go to state 19


State 10

    2 lines: line •

    $default  reduce using rule 2 (lines)


State 11

    4 line: declarations • NEWLINE
    7 declarations: declarations • declaration

    NEWLINE  shift, and go to state 29
    INT      shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOL     shift, and go to state 4

    declaration  go to state 30


State 12

    6 declarations: declaration •

    $default  reduce using rule 6 (declarations)


State 13

    5 line: commands • NEWLINE
   12 commands: commands • command

    IF       shift, and go to state 1
    NEWLINE  shift, and go to state 31
    READ     shift, and go to state 5
    WRITE    shift, and go to state 6
    ID       shift, and go to state 7

    command        go to state 32
    read_command   go to state 15
    write_command  go to state 16
    assignments    go to state 17
    assignment     go to state 18
    if_command     go to state 19


State 14

   11 commands: command •

    $default  reduce using rule 11 (commands)


State 15

   15 command: read_command • END

    END  shift, and go to state 33


State 16

   16 command: write_command • END

    END  shift, and go to state 34


State 17

   14 command: assignments •

    $default  reduce using rule 14 (command)


State 18

   19 assignments: assignment •

    $default  reduce using rule 19 (assignments)


State 19

   13 command: if_command •

    $default  reduce using rule 13 (command)


State 20

   42 if_command: IF OPEN_PARENTHESIS • boolean_expression CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS ELSE OPEN_BRACKETS expression CLOSE_BRACKETS
   43           | IF OPEN_PARENTHESIS • boolean_expression CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS

    NUM               shift, and go to state 35
    NOT               shift, and go to state 36
    OPEN_PARENTHESIS  shift, and go to state 37
    TRUEbool          shift, and go to state 38
    FALSEbool         shift, and go to state 39
    ID                shift, and go to state 40

    expression          go to state 41
    term                go to state 42
    factor              go to state 43
    boolean_expression  go to state 44


State 21

    8 declaration: INT ID • END

    END  shift, and go to state 45


State 22

    9 declaration: FLOAT ID • END

    END  shift, and go to state 46


State 23

   10 declaration: BOOL ID • END

    END  shift, and go to state 47


State 24

   17 read_command: READ OPEN_PARENTHESIS • ID CLOSE_PARENTHESIS

    ID  shift, and go to state 48


State 25

   18 write_command: WRITE OPEN_PARENTHESIS • expression CLOSE_PARENTHESIS

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 49
    term        go to state 42
    factor      go to state 43


State 26

   20 assignment: ID ASSIGN • expression END

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 50
    term        go to state 42
    factor      go to state 43


State 27

    0 $accept: program $end •

    $default  accept


State 28

    3 lines: lines line •

    $default  reduce using rule 3 (lines)


State 29

    4 line: declarations NEWLINE •

    $default  reduce using rule 4 (line)


State 30

    7 declarations: declarations declaration •

    $default  reduce using rule 7 (declarations)


State 31

    5 line: commands NEWLINE •

    $default  reduce using rule 5 (line)


State 32

   12 commands: commands command •

    $default  reduce using rule 12 (commands)


State 33

   15 command: read_command END •

    $default  reduce using rule 15 (command)


State 34

   16 command: write_command END •

    $default  reduce using rule 16 (command)


State 35

   27 factor: NUM •

    $default  reduce using rule 27 (factor)


State 36

   32 boolean_expression: NOT • boolean_expression

    NUM               shift, and go to state 35
    NOT               shift, and go to state 36
    OPEN_PARENTHESIS  shift, and go to state 37
    TRUEbool          shift, and go to state 38
    FALSEbool         shift, and go to state 39
    ID                shift, and go to state 40

    expression          go to state 41
    term                go to state 42
    factor              go to state 43
    boolean_expression  go to state 51


State 37

   29 factor: OPEN_PARENTHESIS • expression CLOSE_PARENTHESIS

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 52
    term        go to state 42
    factor      go to state 43


State 38

   30 boolean_expression: TRUEbool •

    $default  reduce using rule 30 (boolean_expression)


State 39

   31 boolean_expression: FALSEbool •

    $default  reduce using rule 31 (boolean_expression)


State 40

   28 factor: ID •

    $default  reduce using rule 28 (factor)


State 41

   22 expression: expression • PLUS term
   23           | expression • MINUS term
   33 boolean_expression: expression • EQUAL expression
   34                   | expression • LESS_EQUAL expression
   35                   | expression • GREATER_EQUAL expression
   36                   | expression • NOT_EQUAL expression
   37                   | expression • LESS expression
   38                   | expression • GREATER expression
   39                   | expression • OR expression
   40                   | expression • AND expression
   41                   | expression •

    PLUS           shift, and go to state 53
    MINUS          shift, and go to state 54
    EQUAL          shift, and go to state 55
    LESS           shift, and go to state 56
    GREATER        shift, and go to state 57
    LESS_EQUAL     shift, and go to state 58
    NOT_EQUAL      shift, and go to state 59
    GREATER_EQUAL  shift, and go to state 60
    AND            shift, and go to state 61
    OR             shift, and go to state 62

    $default  reduce using rule 41 (boolean_expression)


State 42

   21 expression: term •
   25 term: term • MULTIPLY factor
   26     | term • DIVIDE factor

    MULTIPLY  shift, and go to state 63
    DIVIDE    shift, and go to state 64

    $default  reduce using rule 21 (expression)


State 43

   24 term: factor •

    $default  reduce using rule 24 (term)


State 44

   42 if_command: IF OPEN_PARENTHESIS boolean_expression • CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS ELSE OPEN_BRACKETS expression CLOSE_BRACKETS
   43           | IF OPEN_PARENTHESIS boolean_expression • CLOSE_PARENTHESIS OPEN_BRACKETS assignments CLOSE_BRACKETS

    CLOSE_PARENTHESIS  shift, and go to state 65


State 45

    8 declaration: INT ID END •

    $default  reduce using rule 8 (declaration)


State 46

    9 declaration: FLOAT ID END •

    $default  reduce using rule 9 (declaration)


State 47

   10 declaration: BOOL ID END •

    $default  reduce using rule 10 (declaration)


State 48

   17 read_command: READ OPEN_PARENTHESIS ID • CLOSE_PARENTHESIS

    CLOSE_PARENTHESIS  shift, and go to state 66


State 49

   18 write_command: WRITE OPEN_PARENTHESIS expression • CLOSE_PARENTHESIS
   22 expression: expression • PLUS term
   23           | expression • MINUS term

    PLUS               shift, and go to state 53
    MINUS              shift, and go to state 54
    CLOSE_PARENTHESIS  shift, and go to state 67


State 50

   20 assignment: ID ASSIGN expression • END
   22 expression: expression • PLUS term
   23           | expression • MINUS term

    PLUS   shift, and go to state 53
    MINUS  shift, and go to state 54
    END    shift, and go to state 68


State 51

   32 boolean_expression: NOT boolean_expression •

    $default  reduce using rule 32 (boolean_expression)


State 52

   22 expression: expression • PLUS term
   23           | expression • MINUS term
   29 factor: OPEN_PARENTHESIS expression • CLOSE_PARENTHESIS

    PLUS               shift, and go to state 53
    MINUS              shift, and go to state 54
    CLOSE_PARENTHESIS  shift, and go to state 69


State 53

   22 expression: expression PLUS • term

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    term    go to state 70
    factor  go to state 43


State 54

   23 expression: expression MINUS • term

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    term    go to state 71
    factor  go to state 43


State 55

   33 boolean_expression: expression EQUAL • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 72
    term        go to state 42
    factor      go to state 43


State 56

   37 boolean_expression: expression LESS • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 73
    term        go to state 42
    factor      go to state 43


State 57

   38 boolean_expression: expression GREATER • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 74
    term        go to state 42
    factor      go to state 43


State 58

   34 boolean_expression: expression LESS_EQUAL • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 75
    term        go to state 42
    factor      go to state 43


State 59

   36 boolean_expression: expression NOT_EQUAL • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 76
    term        go to state 42
    factor      go to state 43


State 60

   35 boolean_expression: expression GREATER_EQUAL • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 77
    term        go to state 42
    factor      go to state 43


State 61

   40 boolean_expression: expression AND • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 78
    term        go to state 42
    factor      go to state 43


State 62

   39 boolean_expression: expression OR • expression

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    expression  go to state 79
    term        go to state 42
    factor      go to state 43


State 63

   25 term: term MULTIPLY • factor

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    factor  go to state 80


State 64

   26 term: term DIVIDE • factor

    NUM               shift, and go to state 35
    OPEN_PARENTHESIS  shift, and go to state 37
    ID                shift, and go to state 40

    factor  go to state 81


State 65

   42 if_command: IF OPEN_PARENTHESIS boolean_expression CLOSE_PARENTHESIS • OPEN_BRACKETS assignments CLOSE_BRACKETS ELSE OPEN_BRACKETS expression CLOSE_BRACKETS
   43           | IF OPEN_PARENTHESIS boolean_expression CLOSE_PARENTHESIS • OPEN_BRACKETS assignments CLOSE_BRACKETS

    OPEN_BRACKETS  shift, and go to state 82


State 66

   17 read_command: READ OPEN_PARENTHESIS ID CLOSE_PARENTHESIS •

    $default  reduce using rule 17 (read_command)


State 67
